tests/ui/unstable-feature_bound/unstable_feature_bound_propagate_bound.fail.stderr
error: unstable feature `feat_bar` is used without being enabled.
  --> $DIR/unstable_feature_bound_propagate_bound.rs:37:5
   |
LL |     bar();
   |     ^^^^^
   |
   = help: The feature can be enabled by marking the current item with `#[unstable_feature_bound(feat_bar)]`
note: required by a bound in `bar`
  --> $DIR/unstable_feature_bound_propagate_bound.rs:30:1
   |
LL | #[unstable_feature_bound(feat_bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `bar`
LL | fn bar() {
   |    --- required by a bound in this function

error: aborting due to 1 previous error

